Thu Mar 24 20:10:55 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/DnC_Dump.cpp:

          Stab at a fix for a compile error.

Thu Mar 24 18:48:45 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/RepositoryManager/RepositoryManager_Impl.cpp:
        * dance/RepositoryManager/Repository_Manager.cpp:
        * dance/RepositoryManager/ZIP_Wrapper.cpp:

          Compile errors.

Thu Mar 24 00:21:24 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * tests/Parsing/domain.cpp:
        * tests/Parsing/test.cpp:
        * tools/Split_Plan/Split_Plan.cpp:
        * tools/System_Health/Interceptors/SHS_CORBA_Transport.cpp:

          Defuzzing. I fixed my laptop emacs too.

Wed Mar 23 18:54:04 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * tools/Split_Plan/Split_Plan.cpp:
        * tools/System_Health/Interceptors/SHS_CORBA_Transport.cpp:

          Fixed scoreboard issues related to split strings on a build
          using wide characters.

Wed Mar 23 14:08:12 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/TargetManager/CmpClient.cpp:

          Log macros.

Wed Mar 23 14:04:55 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/TargetManager/DomainDataManager.cpp:
        * dance/TargetManager/Target_Manager.cpp:
        * dance/TargetManager/Target_Manager_Module.cpp:

          New logging macros.

Wed Mar 23 13:50:37 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/RepositoryManager/PC_Updater.cpp:
        * dance/RepositoryManager/RepositoryManager.cpp:
        * dance/RepositoryManager/RepositoryManager_Impl.cpp:
        * dance/RepositoryManager/Repository_Manager.cpp:
        * dance/RepositoryManager/Repository_Manager_Module.cpp:
        * dance/RepositoryManager/URL_Parser.cpp: